# photo-cat

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_IT.md  REUSE.toml  SECURITY.md  START_HERE.txt  START_HERE_IT.txt  START_UNIX.sh  START_WINDOWS.bat  config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  (+1 more)
assets/: README.md  README_IT.md
data/: README.md
docs/: Architecture.md  Architecture_IT.md  Command-line.md  Command-line_IT.md  Configuration.md  Configuration_IT.md  Development.md  Development_IT.md  Download-and-usage.md  Download-and-usage_IT.md  Input-data.md  Input-data_IT.md  PUBLISHING.md  PUBLISHING_IT.md  Pipeline-and-output.md  Pipeline-and-output_IT.md  Public-Contracts.md  Public-Contracts_IT.md  README_IT.md  Runtime-and-Python.md  Runtime-and-Python_IT.md  START_HERE_IT.txt  Troubleshooting_IT.md
scripts/: README.md  README_IT.md  fix_console_window.ps1  run_pipeline_unix.sh  run_pipeline_windows.bat  start_linux_macos.sh  start_windows.ps1
src/: README.md  README_IT.md  build_neighbors_index.py  config_and_run.py  configure_gui.py  install.py  load_config.py  logger_setup.py  pipeline_display.py  query_contamination_from_index.py
tests/: conftest.py  test_build_helpers.py  test_cli_interface.py  test_cli_overrides.py  test_configuration_edge_cases.py  test_configuration_lifecycle.py  test_doctor.py  test_index_integrity.py  test_input_validation.py  test_launcher_security.py  test_load_config.py  test_logger_setup.py  test_path_policy.py  test_pipeline_display.py  test_pipeline_execution_context.py  test_pipeline_orchestration.py  test_pipeline_sample.py  test_query_helpers.py  test_runtime_boundaries.py  test_test_conventions.py
(+11 files in other folders)
