[tool.poetry]
name = "photo-cat"
version = "1.2.0"
description = "A GUI-assisted photometric contamination analysis tool."
authors = ["Gabriele Galletta <gabriele.galletta@inaf.it>", "PHOTO-CAT contributors"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/Daddi14/photo-cat"
repository = "https://github.com/Daddi14/photo-cat"
documentation = "https://github.com/Daddi14/photo-cat/tree/main/docs"
keywords = ["astronomy", "photometry", "contamination", "catalogue", "gaia"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
packages = [
    { include = "photo_cat", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = ">=1.24"
pandas = ">=2.0"
scipy = ">=1.10"
tqdm = ">=4.64"
PyYAML = ">=6.0"
pyarrow = ">=12.0"
dask = { version = ">=2023.0", extras = ["dataframe"] }

[tool.poetry.scripts]
photo-cat = "photo_cat.cli:main"
photo-cat-run = "photo_cat.config_and_run:main"
photo-cat-configure = "photo_cat.configure_gui:main"
photo-cat-install = "photo_cat.install:main"
photo-cat-build-index = "photo_cat.build_neighbors_index:main"
photo-cat-query-contamination = "photo_cat.query_contamination_from_index:main"
photo-cat-doctor = "photo_cat.doctor:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
build = ">=1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
